# high-level-Motion-Planning

./: JetBrains.gitignore  README.md  option_learner.py
Archived/Drivers/HapticService/: CMakeLists.txt  JSONService.cpp  JSONService.h  README.txt  haptic_control_test.cpp  haptic_service.cpp
Archived/RealSenseService/RealSenseClient/: CMakeLists.txt  README.md  realsense_ros_emitter.cpp
Archived/RealSenseService/RealSenseClient/CMakeModules/: FindKrisLibrary.cmake  FindLibJPEG.cmake  FindLibpng.cmake  FindROS.cmake  FindZLIB.cmake  KrisLibraryDependencies.cmake
Archived/Sensors/RealSenseService/: CMakeLists.txt  realsense_service.cpp
Archived/Sensors/RealSenseService/CMakeModules/: FindOpenHaptics.cmake  FindRealSense.cmake  FindSSPP.cmake
Ebolabot/: .gitignore  CMakeLists.txt  README.txt  global_move_test.py  motion_computer_start.sh  ros_vision.init.sh  run.sh  switch_to_physical.sh  switch_to_virtual.sh  update.sh  virtual_motion_computer_start.sh  vision_start_all.sh
Ebolabot/Common/: SWIGPyObject.h  echo_cmd.py  echo_state.py  ppu_system_state_broadcaster.py  print_state.py  system_config.cpp  system_config.h  system_config.py  system_config_physical.json  system_config_virtual.json  system_state_service.py
Ebolabot/Common/ArduinoTools/: README.md  ethernet_messaging.py
Ebolabot/Common/ArduinoTools/ethernet_messaging/: ethernet_messaging.ino
Ebolabot/Common/ArduinoTools/serial_messaging/: serial_messaging.ino
Ebolabot/Controller/: MultiIKController.cpp  MultiIKController.h  PyTaskController.cpp  PyTaskController.h  TaskController.cpp  TaskController.h  controller_dispatcher.cpp  controller_service.cpp  task_tester.py  task_viewer.py
Ebolabot/Controller/Tasks/: base_velocity.py  cartesian_pose.py  cartesian_velocity.py  gripper.py  joint_pose.py  joint_velocity.py  raw_joint_position.py  raw_joint_velocity.py  task_controller.py
Ebolabot/Controller/Tasks/SafeBaseControl/: BaseSensing.py  BaseSensing.py~  BaseSensing2.py  DataViewer.py  DataViewer2.py  MotionTest.py  README.txt  safe_base_control.py
Ebolabot/Controller/Tasks/Templates/: CartesianPose.json  CartesianVelocity.json  JointPose.json  JointVelocity.json  MultiIK.json  PPUJointPose.json  RawJointPosition.json  RawJointVelocity.json
Ebolabot/Controller/Tasks/temp/: base_velocity_old.py  ppu_joint_pose.py
Ebolabot/Hardware/Pointer/: .gitignore  TODO.md  pointer.py  pointer_client.py  pointer_server.py  ppu_coord_slider.py  ppu_rad_slider.py  ppu_raw_slider.py  serialhandler.py  textmonitor.py
Ebolabot/Hardware/Pointer/Hardware Documentation/: Pointer BOM.ods
Ebolabot/Hardware/Pointer/pointer_driver/: nonblocktimer.h  packagehandler.h  pointer_driver.ino
Ebolabot/Hardware/Pointer/serialhandler_example/: packagehandler.h  serialhandler_example.ino
Ebolabot/Hardware/RemoteStart/: README.txt  remote_start.py
Ebolabot/Hardware/RemoteStart/ethernet_relay/: ethernet_relay.ino
Ebolabot/Hardware/backup_pack/ebolabot/: package.xml
Ebolabot/Hardware/backup_pack/hstar_amp/: CMakeLists.txt  amp1_cover.stl  package.xml
Ebolabot/Hardware/backup_pack/roboteq_driver/: HT_CHANGES
Ebolabot/Hardware/backup_pack/roboteq_msgs/: CMakeLists.txt
Ebolabot/Hardware/iml_grasp_acquisition/: CMakeLists.txt  README.md  package.xml
Ebolabot/InputDevices/3DMouse/: 3dMouse.py
Ebolabot/InputDevices/BaxterPuppet/: filters.py  readArduino.py
Ebolabot/InputDevices/GamePad/: README.txt  logitech.py
Ebolabot/InputDevices/Slider/: README.txt  baxter_slider.py  slider.py
Ebolabot/Motion/: config.py  config_physical.py  motion.h  motion.py  motion_client.cpp  motion_common.h  motion_kinematic.cpp  motion_physical.cpp  motion_server.cpp  motion_server_kinematic.cpp  motion_server_physical.cpp  motion_state.h
Ebolabot/Sensors/: realsense_ros_emitter.cpp  realsense_ros_emitter_no_compress.cpp
Ebolabot/Testing/: GamePad_noGUI.py  base_calibrate.py  base_control.py  cartesian_drive_control.py  cartesian_pose_control.py  collision_avoidance.py  collision_test.py  collision_test_kinect_ericchen.py  collision_test_obstacle_topic.py  gripper_testing.py  motion_template.py  motion_testing.py  puppet_test.py  test_hokyo_laser.py  test_pcd.pcd  watcher.py  widget_control.py  widget_ui.py
Ebolabot/UI/: GLGUIPlugin.h  PyTaskGenerator.cpp  PyTaskGenerator.h  TaskGenerator.cpp  TaskGenerator.h  TaskManager.cpp  TaskManager.h  haptic_widget.py  haptic_widget_v1.py  task_gui_demo.cpp  widget_haptics.py
Ebolabot/UI/Resources/: neutral.config  tuck.config
Ebolabot/UI/TaskGenerators/: game_pad.py  game_pad_mobile_base.py  haptic.py  keyboard_autotrack.py  mouse_poser.py  simple_ui.py  skittles.py  task_generator.py
Ebolabot/UI/utils/: gltexture.py  haptic_client.py
Ebolabot/klampt_models/: baxter.rob  baxter_col.rob  baxter_reflex.py  baxter_with_parallel_gripper_col.rob  baxter_with_reflex_gripper.rob  baxter_with_reflex_gripper_col.rob  ebolabot_baxter_torso_col.rob  ebolabot_col.rob  hstar_amp1.rob  hstar_amp1_col.rob  hstar_amp1_cover.stl  ppu.rob  ppu_old.rob  reflex.py  reflex.rob  reflex_col.py  reflex_col.rob  rethink_electric_gripper.py  rethink_electric_gripper.rob  sensors.xml
Ebolabot/klampt_models/ppu/: ppu-link-1.STL
Ebolabot/klampt_models/ppu_old/: ppu-link-1.stl  ppu-link-2.STL  ppu-link-3.STL  ppu-link-4.STL
Ebolabot/klampt_models/reflex/: base_link.off  distal_1.off  distal_pad_1.off  distal_pad_3.off  finger[2]-flex_link[8].off  pad.off  proximal_3.off  proximal_pad_2.off  proximal_pad_3.off  swivel_2.off
SSPP/: .gitignore  CMakeLists.txt  README.txt
SSPP/CMakeModules/: FindKrisLibrary.cmake
SSPP/Python/: setup.py
SSPP/Python/sspp/: echo_service.py  log_service.py  send.py  service.py  spiffy.py  structure_service.py  topic.py
SSPP/include/sspp/: Config.h  Recv.h  Send.h  Service.h  Spiffy.h  Topic.h
SSPP/services/: .gitignore  spiffy_gui.py  spiffy_service.py  spiffy_test.py  topic_server.py
SSPP/src/services/: echo_service.cpp  heartbeat_service.cpp  log_service.cpp  send_service.cpp
SSPP/src/sspp/: Send.cpp  Service.cpp  Spiffy.cpp  Topic.cpp
(+2354 files in other folders)
